--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,7 @@ jobs:
       
       - name: Build on linux
         if: runner.os == 'Linux'
+        shell: bash
         run: ./build.sh
 
       - name: Upload artifact
