--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,8 +29,7 @@ jobs:
       
       - name: Build on linux
         if: runner.os == 'Linux'
-        shell: bash
-        run: ./build.sh
+        run: chmod +x ./build.sh && bash ./build.sh
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
